--- a/notebooks/simple_example.ipynb
+++ b/notebooks/simple_example.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/.conda/envs/surprise2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import surprise_similarity\n",
     "similarity = surprise_similarity.SurpriseSimilarity()"
@@ -44,12 +35,14 @@
    "metadata": {},
    "source": [
     "## Vocabulary\n",
-    "For this example we'll use the vocabulary given by `english_words_alpha_set` shipped with the package https://pypi.org/project/english-words/."
+    "For this example we'll use the vocabulary given by `english_words_alpha_set` shipped with the package https://pypi.org/project/english-words/.\n",
+    "\n",
+    "`pip install english-words==1.1.0`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -77,15 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Batches: 100%|██████████| 797/797 [00:07<00:00, 105.53it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c71d248d65d4b23a09d63d1ae334a10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/797 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -114,27 +114,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6596</th>\n",
+       "      <th>19923</th>\n",
        "      <td>dog</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1584</th>\n",
+       "      <th>13908</th>\n",
        "      <td>canine</td>\n",
        "      <td>0.952441</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11666</th>\n",
+       "      <th>14719</th>\n",
        "      <td>pup</td>\n",
        "      <td>0.935472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19924</th>\n",
+       "      <th>9724</th>\n",
        "      <td>animal</td>\n",
        "      <td>0.929151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20715</th>\n",
+       "      <th>402</th>\n",
        "      <td>pooch</td>\n",
        "      <td>0.928523</td>\n",
        "    </tr>\n",
@@ -144,14 +144,14 @@
       ],
       "text/plain": [
        "      documents       dog\n",
-       "6596        dog  1.000000\n",
-       "1584     canine  0.952441\n",
-       "11666       pup  0.935472\n",
-       "19924    animal  0.929151\n",
-       "20715     pooch  0.928523"
+       "19923       dog  1.000000\n",
+       "13908    canine  0.952441\n",
+       "14719       pup  0.935472\n",
+       "9724     animal  0.929151\n",
+       "402       pooch  0.928523"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -208,37 +208,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>648</th>\n",
+       "      <th>1231</th>\n",
        "      <td>the</td>\n",
        "      <td>0.852129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19796</th>\n",
+       "      <th>6091</th>\n",
        "      <td>potato</td>\n",
        "      <td>0.850233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25127</th>\n",
+       "      <th>20634</th>\n",
        "      <td>my</td>\n",
        "      <td>0.850161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11001</th>\n",
+       "      <th>15945</th>\n",
        "      <td>Alsatian</td>\n",
        "      <td>0.849615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2049</th>\n",
+       "      <th>9775</th>\n",
        "      <td>furry</td>\n",
        "      <td>0.833391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3254</th>\n",
+       "      <th>12785</th>\n",
        "      <td>puppyish</td>\n",
        "      <td>0.829942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14978</th>\n",
+       "      <th>8224</th>\n",
        "      <td>Jude</td>\n",
        "      <td>0.783955</td>\n",
        "    </tr>\n",
@@ -248,16 +248,16 @@
       ],
       "text/plain": [
        "      documents       dog\n",
-       "648         the  0.852129\n",
-       "19796    potato  0.850233\n",
-       "25127        my  0.850161\n",
-       "11001  Alsatian  0.849615\n",
-       "2049      furry  0.833391\n",
-       "3254   puppyish  0.829942\n",
-       "14978      Jude  0.783955"
+       "1231        the  0.852129\n",
+       "6091     potato  0.850233\n",
+       "20634        my  0.850161\n",
+       "15945  Alsatian  0.849615\n",
+       "9775      furry  0.833391\n",
+       "12785  puppyish  0.829942\n",
+       "8224       Jude  0.783955"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -321,39 +321,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11001</th>\n",
+       "      <th>15945</th>\n",
        "      <td>Alsatian</td>\n",
-       "      <td>0.999322</td>\n",
+       "      <td>0.999324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2049</th>\n",
+       "      <th>9775</th>\n",
        "      <td>furry</td>\n",
-       "      <td>0.994495</td>\n",
+       "      <td>0.995270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3254</th>\n",
+       "      <th>12785</th>\n",
        "      <td>puppyish</td>\n",
-       "      <td>0.987840</td>\n",
+       "      <td>0.987276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19796</th>\n",
+       "      <th>6091</th>\n",
        "      <td>potato</td>\n",
-       "      <td>0.986203</td>\n",
+       "      <td>0.987208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>648</th>\n",
+       "      <th>1231</th>\n",
        "      <td>the</td>\n",
-       "      <td>0.979125</td>\n",
+       "      <td>0.980269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25127</th>\n",
+       "      <th>20634</th>\n",
        "      <td>my</td>\n",
-       "      <td>0.973552</td>\n",
+       "      <td>0.974568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14978</th>\n",
+       "      <th>8224</th>\n",
        "      <td>Jude</td>\n",
-       "      <td>0.646892</td>\n",
+       "      <td>0.641516</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -361,16 +361,16 @@
       ],
       "text/plain": [
        "      documents       dog\n",
-       "11001  Alsatian  0.999322\n",
-       "2049      furry  0.994495\n",
-       "3254   puppyish  0.987840\n",
-       "19796    potato  0.986203\n",
-       "648         the  0.979125\n",
-       "25127        my  0.973552\n",
-       "14978      Jude  0.646892"
+       "15945  Alsatian  0.999324\n",
+       "9775      furry  0.995270\n",
+       "12785  puppyish  0.987276\n",
+       "6091     potato  0.987208\n",
+       "1231        the  0.980269\n",
+       "20634        my  0.974568\n",
+       "8224       Jude  0.641516"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,21 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on 2 examples...\n",
+      "Training on 6 examples...\n",
       "\n",
-      "Training time: 0:07min (30 iterations, F1: 1.0)\n"
+      "Training time: 0:04min (14 iterations, F1: 1.0)\n"
      ]
     }
    ],
    "source": [
-    "similarity.train(keys=[\"dog\", 'pet'], queries=[my_dogs_name, my_dogs_name], min_its=30, lr_factor=1)"
+    "similarity.train(keys=[\"dog\", 'pet',\"potato\"], queries=[my_dogs_name, my_dogs_name,None], min_its=1)"
    ]
   },
   {
@@ -433,15 +433,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Batches: 100%|██████████| 796/796 [00:07<00:00, 105.04it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92c7615522244251a513b9a59b6980b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/796 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -470,39 +477,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19796</th>\n",
-       "      <td>potato</td>\n",
-       "      <td>0.925398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14978</th>\n",
+       "      <th>8224</th>\n",
        "      <td>Jude</td>\n",
-       "      <td>0.923478</td>\n",
+       "      <td>0.842758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25127</th>\n",
+       "      <th>20634</th>\n",
        "      <td>my</td>\n",
-       "      <td>0.921206</td>\n",
+       "      <td>0.804660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>648</th>\n",
+       "      <th>1231</th>\n",
        "      <td>the</td>\n",
-       "      <td>0.915926</td>\n",
+       "      <td>0.799246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11001</th>\n",
+       "      <th>15945</th>\n",
        "      <td>Alsatian</td>\n",
-       "      <td>0.909983</td>\n",
+       "      <td>0.797201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2049</th>\n",
+       "      <th>9775</th>\n",
        "      <td>furry</td>\n",
-       "      <td>0.909034</td>\n",
+       "      <td>0.779097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3254</th>\n",
+       "      <th>12785</th>\n",
        "      <td>puppyish</td>\n",
-       "      <td>0.904946</td>\n",
+       "      <td>0.775524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6091</th>\n",
+       "      <td>potato</td>\n",
+       "      <td>0.445254</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -510,16 +517,16 @@
       ],
       "text/plain": [
        "      documents       dog\n",
-       "19796    potato  0.925398\n",
-       "14978      Jude  0.923478\n",
-       "25127        my  0.921206\n",
-       "648         the  0.915926\n",
-       "11001  Alsatian  0.909983\n",
-       "2049      furry  0.909034\n",
-       "3254   puppyish  0.904946"
+       "8224       Jude  0.842758\n",
+       "20634        my  0.804660\n",
+       "1231        the  0.799246\n",
+       "15945  Alsatian  0.797201\n",
+       "9775      furry  0.779097\n",
+       "12785  puppyish  0.775524\n",
+       "6091     potato  0.445254"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -574,39 +581,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11001</th>\n",
-       "      <td>Alsatian</td>\n",
-       "      <td>0.999363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19796</th>\n",
-       "      <td>potato</td>\n",
-       "      <td>0.999309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2049</th>\n",
-       "      <td>furry</td>\n",
-       "      <td>0.999302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14978</th>\n",
+       "      <th>8224</th>\n",
        "      <td>Jude</td>\n",
-       "      <td>0.999295</td>\n",
+       "      <td>0.999323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3254</th>\n",
+       "      <th>15945</th>\n",
+       "      <td>Alsatian</td>\n",
+       "      <td>0.997128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9775</th>\n",
+       "      <td>furry</td>\n",
+       "      <td>0.973405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12785</th>\n",
        "      <td>puppyish</td>\n",
-       "      <td>0.999283</td>\n",
+       "      <td>0.964916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>648</th>\n",
-       "      <td>the</td>\n",
-       "      <td>0.999091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25127</th>\n",
+       "      <th>20634</th>\n",
        "      <td>my</td>\n",
-       "      <td>0.998881</td>\n",
+       "      <td>0.944466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1231</th>\n",
+       "      <td>the</td>\n",
+       "      <td>0.906733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6091</th>\n",
+       "      <td>potato</td>\n",
+       "      <td>0.000353</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -614,16 +621,16 @@
       ],
       "text/plain": [
        "      documents       dog\n",
-       "11001  Alsatian  0.999363\n",
-       "19796    potato  0.999309\n",
-       "2049      furry  0.999302\n",
-       "14978      Jude  0.999295\n",
-       "3254   puppyish  0.999283\n",
-       "648         the  0.999091\n",
-       "25127        my  0.998881"
+       "8224       Jude  0.999323\n",
+       "15945  Alsatian  0.997128\n",
+       "9775      furry  0.973405\n",
+       "12785  puppyish  0.964916\n",
+       "20634        my  0.944466\n",
+       "1231        the  0.906733\n",
+       "6091     potato  0.000353"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
